--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -28,7 +28,8 @@
             <TextView
                 android:layout_marginTop="-10dp"
                 android:textAlignment="center"
-                android:textSize="30sp"
+                android:textSize="30dp"
+                android:paddingTop="2dp"
                 android:layout_width="315dp"
                 android:layout_height="40dp"
                 android:text="상세정보"/>
@@ -40,6 +41,7 @@
             android:layout_height="45dp"
             android:layout_gravity="right"
             android:gravity="end"
+            android:paddingTop="5dp"
             android:orientation="horizontal">
 
             <Button
@@ -52,6 +54,7 @@
                 android:button="@null"
                 android:background="#e9ecef"
                 android:text="취소"
+                android:textSize="14dp"
                 android:drawableLeft="@drawable/cancle"/>
 
             <CheckBox
@@ -64,6 +67,7 @@
                 android:button="@null"
                 android:background="#e9ecef"
                 android:text="수정"
+                android:textSize="14dp"
                 android:drawableLeft="@drawable/edit"/>
 
             <Button
@@ -76,6 +80,7 @@
                 android:button="@null"
                 android:background="#e9ecef"
                 android:text="삭제"
+                android:textSize="14dp"
                 android:drawableLeft="@drawable/delete"/>
 
         </LinearLayout>
@@ -95,7 +100,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="옷장 위치"
-            android:textSize="20dp" />
+            android:textSize="18dp" />
 
 
         <Spinner
@@ -108,7 +113,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="옷 이름"
-            android:textSize="20dp" />
+            android:textSize="18dp" />
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -123,7 +128,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="옷 브랜드"
-            android:textSize="20dp" />
+            android:textSize="18dp" />
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -143,7 +148,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:text="옷 종류"
-                android:textSize="20dp" />
+                android:textSize="18dp" />
             <EditText
                 android:id="@+id/detail_c_type_add"
                 android:layout_width="wrap_content"
@@ -158,7 +163,7 @@
                 android:id="@+id/detail_c_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+                android:layout_weight="0.55"/>
         </LinearLayout>
         <LinearLayout
             android:layout_marginTop="20dp"
@@ -170,7 +175,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:text="옷 사이즈"
-                android:textSize="20dp" />
+                android:textSize="18dp" />
             <EditText
                 android:id="@+id/detail_c_size_add"
                 android:layout_width="wrap_content"
@@ -199,7 +204,7 @@
                 android:layout_marginBottom="8dp"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="350dp"
+            android:layout_width="320dp"
             android:layout_height="30dp"
             android:layout_gravity="center">
 
@@ -211,6 +216,7 @@
                 android:layout_weight="1"
                 android:button="@null"
                 android:text="봄"
+                android:textSize="14dp"
                 android:textAlignment="center"
                 android:background="#f1f3f5" />
 
@@ -220,6 +226,7 @@
                 android:layout_weight="1"
                 android:button="@null"
                 android:text="여름"
+                android:textSize="14dp"
                 android:textAlignment="center"
                 android:background="#f1f3f5"
                 android:id="@+id/weatherSelect_summer"
@@ -229,6 +236,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="가을"
+                android:textSize="14dp"
                 android:layout_weight="1"
                 android:button="@null"
                 android:textAlignment="center"
@@ -240,6 +248,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="겨울"
+                android:textSize="14dp"
                 android:layout_weight="1"
                 android:button="@null"
                 android:textAlignment="center"
@@ -251,6 +260,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="전체"
+                android:textSize="14dp"
                 android:layout_weight="1"
                 android:button="@null"
                 android:textAlignment="center"
@@ -264,7 +274,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="메모"
-            android:textSize="20dp" />
+            android:textSize="18dp" />
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -278,7 +288,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="등록 날짜"
-            android:textSize="20dp" />
+            android:textSize="18dp" />
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
