--- a/app/src/main/res/layout/cody_detail.xml
+++ b/app/src/main/res/layout/cody_detail.xml
@@ -28,9 +28,10 @@
             <TextView
                 android:layout_marginTop="-10dp"
                 android:textAlignment="center"
-                android:textSize="30sp"
+                android:paddingTop="2dp"
+                android:textSize="30dp"
                 android:layout_width="315dp"
-                android:layout_height="40dp"
+                android:layout_height="42dp"
                 android:text="상세정보"/>
 
         </LinearLayout>
@@ -40,6 +41,7 @@
             android:layout_height="45dp"
             android:layout_gravity="right"
             android:gravity="end"
+            android:paddingTop="5dp"
             android:orientation="horizontal">
 
             <Button
@@ -52,6 +54,7 @@
                 android:button="@null"
                 android:background="#e9ecef"
                 android:text="취소"
+                android:textSize="14dp"
                 android:drawableLeft="@drawable/cancle"/>
 
             <CheckBox
@@ -64,6 +67,7 @@
                 android:button="@null"
                 android:background="#e9ecef"
                 android:text="수정"
+                android:textSize="14dp"
                 android:drawableLeft="@drawable/edit"/>
 
             <Button
@@ -76,6 +80,7 @@
                 android:button="@null"
                 android:background="#e9ecef"
                 android:text="삭제"
+                android:textSize="14dp"
                 android:drawableLeft="@drawable/delete"/>
 
         </LinearLayout>
@@ -97,13 +102,14 @@
             android:layout_height="40dp"
             android:text="코디 위치"
             android:layout_marginLeft="10dp"
-            android:textSize="20dp" />
+            android:textSize="18dp" />
 
         <Spinner
             android:id="@+id/detail_cod_loc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:textAlignment="center"/>
 
         <TextView
             android:layout_marginTop="20dp"
@@ -111,7 +117,7 @@
             android:layout_height="40dp"
             android:text="코디 이름"
             android:layout_marginLeft="10dp"
-            android:textSize="20dp" />
+            android:textSize="18dp" />
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -134,6 +140,7 @@
                 android:layout_width="150dp"
                 android:layout_height="30dp"
                 android:layout_columnWeight="1"
+                android:textSize="14dp"
                 android:layout_gravity="fill"
                 android:background="#FFFFFF"
                 android:drawableTop="@drawable/baseline_add_box_24"
@@ -144,6 +151,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
+                android:textSize="14dp"
                 android:layout_gravity="fill"
                 android:background="#FFFFFF"
                 android:drawableTop="@drawable/baseline_add_box_24"
@@ -154,6 +162,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
+                android:textSize="14dp"
                 android:layout_gravity="fill"
                 android:background="#FFFFFF"
                 android:drawableTop="@drawable/baseline_add_box_24"
@@ -164,6 +173,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
+                android:textSize="14dp"
                 android:layout_gravity="fill"
                 android:background="#FFFFFF"
                 android:drawableTop="@drawable/baseline_add_box_24"
@@ -174,6 +184,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
+                android:textSize="14dp"
                 android:layout_gravity="fill"
                 android:background="#FFFFFF"
                 android:drawableTop="@drawable/baseline_add_box_24"
@@ -184,6 +195,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
+                android:textSize="14dp"
                 android:layout_gravity="fill"
                 android:background="#FFFFFF"
                 android:drawableTop="@drawable/baseline_add_box_24"
@@ -194,6 +206,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
+                android:textSize="14dp"
                 android:layout_gravity="fill"
                 android:background="#FFFFFF"
                 android:drawableTop="@drawable/baseline_add_box_24"
@@ -204,6 +217,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
+                android:textSize="14dp"
                 android:layout_gravity="fill"
                 android:background="#FFFFFF"
                 android:drawableTop="@drawable/baseline_add_box_24"
@@ -223,10 +237,9 @@
                 android:layout_marginBottom="8dp"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="350dp"
+            android:layout_width="320dp"
             android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="10dp">
+            android:layout_gravity="center">
 
             <CheckBox
                 android:id="@+id/weatherSelect_spring"
@@ -236,6 +249,7 @@
                 android:layout_weight="1"
                 android:button="@null"
                 android:text="봄"
+                android:textSize="14dp"
                 android:textAlignment="center"
                 android:background="#f1f3f5" />
 
@@ -245,6 +259,7 @@
                 android:layout_weight="1"
                 android:button="@null"
                 android:text="여름"
+                android:textSize="14dp"
                 android:textAlignment="center"
                 android:background="#f1f3f5"
                 android:id="@+id/weatherSelect_summer"
@@ -254,6 +269,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="가을"
+                android:textSize="14dp"
                 android:layout_weight="1"
                 android:button="@null"
                 android:textAlignment="center"
@@ -265,6 +281,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="겨울"
+                android:textSize="14dp"
                 android:layout_weight="1"
                 android:button="@null"
                 android:textAlignment="center"
@@ -276,6 +293,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="전체"
+                android:textSize="14dp"
                 android:layout_weight="1"
                 android:button="@null"
                 android:textAlignment="center"
@@ -290,7 +308,7 @@
             android:layout_height="40dp"
             android:text="등록 날짜"
             android:layout_marginLeft="10dp"
-            android:textSize="20dp" />
+            android:textSize="18dp" />
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
