--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -29,7 +29,8 @@
             <TextView
                 android:layout_marginTop="-10dp"
                 android:textAlignment="center"
-                android:textSize="30sp"
+                android:textSize="30dp"
+                android:paddingTop="2dp"
                 android:layout_width="315dp"
                 android:layout_height="wrap_content"
                 android:text="옷등록"/>
@@ -63,12 +64,13 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="옷 이름"
-            android:textSize="20dp" />
+            android:textSize="18dp" />
         <EditText
             android:id="@+id/c_name_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
+            android:textSize="18dp"
             android:hint="옷 이름을 입력해주세요."/>
 
         <TextView
@@ -76,12 +78,13 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="옷 브랜드"
-            android:textSize="20dp" />
+            android:textSize="18dp" />
         <EditText
             android:id="@+id/c_brand_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
+            android:textSize="18dp"
             android:hint="브랜드 이름을 입력해주세요."/>
 
         <LinearLayout
@@ -94,7 +97,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:text="옷 종류"
-                android:textSize="20dp" />
+                android:textSize="18dp" />
             <EditText
                 android:id="@+id/c_type_post_add"
                 android:layout_width="wrap_content"
@@ -107,7 +110,7 @@
                 android:id="@+id/c_type_post"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.57"/>
+                android:layout_weight="0.55"/>
         </LinearLayout>
         <LinearLayout
             android:layout_marginTop="20dp"
@@ -119,7 +122,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:text="옷 사이즈"
-                android:textSize="20dp" />
+                android:textSize="18dp" />
             <EditText
                 android:id="@+id/c_size_post_add"
                 android:layout_width="wrap_content"
@@ -141,11 +144,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="태그"
+                android:textSize="18dp"
                 android:textAlignment="center"
                 android:layout_marginTop="15dp"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="350dp"
+            android:layout_width="320dp"
             android:layout_height="30dp"
             android:layout_gravity="center">
 
@@ -158,7 +162,7 @@
                 android:text="봄"
                 android:textSize="14dp"
                 android:textAlignment="center"
-                android:background="#f1f3f5" />
+                android:background="@drawable/left_rounded_off" />
 
             <CheckBox
                 android:layout_width="match_parent"
@@ -168,7 +172,7 @@
                 android:text="여름"
                 android:textSize="14dp"
                 android:textAlignment="center"
-                android:background="#f1f3f5"
+                android:background="#e9ecef"
                 android:id="@+id/weatherSelect_summer"/>
 
             <CheckBox
@@ -179,7 +183,7 @@
                 android:layout_weight="1"
                 android:button="@null"
                 android:textAlignment="center"
-                android:background="#f1f3f5"
+                android:background="#e9ecef"
                 android:id="@+id/weatherSelect_fall" />
 
             <CheckBox
@@ -190,7 +194,7 @@
                 android:layout_weight="1"
                 android:button="@null"
                 android:textAlignment="center"
-                android:background="#f1f3f5"
+                android:background="#e9ecef"
                 android:id="@+id/weatherSelect_winter" />
 
             <CheckBox
@@ -201,7 +205,7 @@
                 android:layout_weight="1"
                 android:button="@null"
                 android:textAlignment="center"
-                android:background="#f1f3f5"
+                android:background="@drawable/right_rounded_off"
                 android:id="@+id/weatherSelect_communal"/>
         </LinearLayout>
 
@@ -210,12 +214,13 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="메모"
-            android:textSize="20dp" />
+            android:textSize="18dp" />
         <EditText
             android:id="@+id/c_memo_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
+            android:textSize="18dp"
             android:hint="메모를 입력해주세요."/>
 
         <Button
@@ -223,6 +228,7 @@
             android:id="@+id/cloth_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="14dp"
             android:text="등록"/>
     </LinearLayout>
 
