--- a/app/src/main/res/layout/tab_sort_cody.xml
+++ b/app/src/main/res/layout/tab_sort_cody.xml
@@ -9,24 +9,26 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp" >
-
+        android:layout_height="40dp" >
         <TextView
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="10"
             android:text="정렬"
             android:textSize="20dp"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="15dp"
             android:layout_gravity="center"
             android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/tabsortClose"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:layout_gravity="right"
-            android:padding="50dp"
             android:src="@drawable/xmark"
+            android:paddingRight="-10dp"
             android:background="#00ff0000"/>
     </LinearLayout>
 
@@ -37,6 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="태그"
+            android:textSize="14dp"
             android:textAlignment="center"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="35dp" />
@@ -45,6 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:textSize="14dp"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="10dp"
             android:text="정확한 검색" />
@@ -62,8 +66,9 @@
             android:layout_weight="1"
             android:button="@null"
             android:text="봄"
+            android:textSize="14dp"
             android:textAlignment="center"
-            android:background="#f1f3f5" />
+            android:background="@drawable/left_rounded_off" />
 
         <CheckBox
             android:layout_width="match_parent"
@@ -71,38 +76,42 @@
             android:layout_weight="1"
             android:button="@null"
             android:text="여름"
+            android:textSize="14dp"
             android:textAlignment="center"
-            android:background="#f1f3f5"
+            android:background="#e9ecef"
             android:id="@+id/weatherSelect_summer"/>
 
         <CheckBox
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="가을"
+            android:textSize="14dp"
             android:layout_weight="1"
             android:button="@null"
             android:textAlignment="center"
-            android:background="#f1f3f5"
+            android:background="#e9ecef"
             android:id="@+id/weatherSelect_fall" />
 
         <CheckBox
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="겨울"
+            android:textSize="14dp"
             android:layout_weight="1"
             android:button="@null"
             android:textAlignment="center"
-            android:background="#f1f3f5"
+            android:background="#e9ecef"
             android:id="@+id/weatherSelect_winter" />
 
         <CheckBox
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="전체"
+            android:textSize="14dp"
             android:layout_weight="1"
             android:button="@null"
             android:textAlignment="center"
-            android:background="#f1f3f5"
+            android:background="@drawable/right_rounded_off"
             android:id="@+id/weatherSelect_communal"/>
     </LinearLayout>
 
@@ -120,8 +129,9 @@
             android:text="이름순정렬"
             android:layout_weight="1"
             android:button="@null"
+            android:textSize="14dp"
             android:textAlignment="center"
-            android:background="#e9ecef"
+            android:background="@drawable/left_rounded_off"
             android:id="@+id/sortSelect_name"/>
 
         <CheckBox
@@ -130,8 +140,9 @@
             android:text="↑ 오름차순"
             android:layout_weight="1"
             android:button="@null"
+            android:textSize="14dp"
             android:textAlignment="center"
-            android:background="#e9ecef"
+            android:background="@drawable/right_rounded_off"
             android:id="@+id/sortSelect_asc"/>
     </LinearLayout>
 
@@ -152,6 +163,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="10"
+            android:textSize="14dp"
             android:text="적용" />
         <View
             android:layout_width="0dp"
